--- a/static/sass/_seller.scss
+++ b/static/sass/_seller.scss
@@ -23,6 +23,33 @@ $orange:#f60;
     width: 100%;
     text-align: center;
   }
+  .c_slide{
+    position: relative;
+    .slidesjs-pagination{
+      position: absolute;
+      width: 100%;
+      text-align: center;
+      bottom: 5px;
+      z-index: 10;
+      li{
+        display: inline-block;
+        height: 5px;
+        width: 20px;
+        background-color: #1b6d85;
+        margin: 0px 4px;
+        a{
+          display: block;
+          width: 100%;
+          height: 100%;
+          overflow: hidden;
+          line-height: 99;
+          &.active{
+            background-color: #fff;
+          }
+        }
+      }
+    }
+  }
 }
 .company{
   margin-top: 10px;
@@ -38,7 +65,7 @@ $orange:#f60;
         line-height: 40px;
         color: #fff;
         background-color: $baseColor;
-        font-size: 16px;
+        font-size: 18px;
       }
       .body{
         padding: 10px;
@@ -86,7 +113,7 @@ $orange:#f60;
         line-height: 40px;
         color: #fff;
         background-color: $baseColor;
-        font-size: 16px;
+        font-size: 18px;
         .more{
           float: right;
           font-size: 14px;
@@ -142,7 +169,7 @@ $orange:#f60;
         padding: 0px 10px;
         //background-color: $baseColor;
         color: $baseColor;
-        font-size: 16px;
+        font-size: 18px;
         border-bottom: 2px solid $baseColor;
       }
       .body{
@@ -155,6 +182,9 @@ $orange:#f60;
           margin: 10px;
           border: 1px solid #eee;
           text-align: center;
+          width: 295px;
+          height: 213px;
+          overflow: hidden;
           &.fleft{
             float: left;
           }
@@ -405,9 +435,21 @@ $orange:#f60;
     line-height: 40px;
     text-align: center;
     margin: 30px auto;
+    border: 1px solid $orange;
+    font-size: 20px;
+    padding: 0px;
+    outline: none;
     &:hover{
       background-color:  $orange;
     }
   }
 }
 /* 公司相册 end */
+.m_pages{
+  background-color: #f8f8f8;
+  padding: 0px 10px;
+  .count{
+    font-size: 18px;
+    line-height: 40px;
+  }
+}
