--- a/static/sass/base.scss
+++ b/static/sass/base.scss
@@ -265,10 +265,10 @@ ul{
           background-color: rgba(35,140,225,0);
           text-align: center;
           width: 100px;
-          &:hover{
-            transition:  background-color 0.3s;
-            background-color: rgba(35,140,225,1);
-          }
+        }
+        &:hover{
+          transition:  background-color 0.3s;
+          background-color: rgba(35,140,225,1);
         }
         &.active{
           background-color: rgba(35,140,225,1);
@@ -297,6 +297,49 @@ ul{
           }
         }
       }
+      /*卖家中心 二级菜单 start*/
+      &.m_sel{
+        .mi_se{
+          position: absolute;
+          background-color: $baseColor;
+          width: 100%;
+          display: none;
+          li{
+            position: relative;
+            display: block;
+            width: 100%;
+            line-height: 40px;
+            font-size: 14px;
+            border-bottom: 1px solid #fff;
+            text-align: center;
+            .mi_th{
+              position: absolute;
+              left: 100%;
+              top:0px;
+              display: none;
+              background-color: $baseColor;
+              border-left: 1px solid #fff;
+              a{
+                display: block;
+                width: 90px;
+                &:hover{
+                  background-color: rgba(35, 140, 225, 1);
+                }
+              }
+            }
+            &:hover{
+              background-color: rgba(35, 140, 225, 1);
+              .mi_th{
+                display: block;
+              }
+            }
+          }
+        }
+        &:hover{
+          .mi_se{display: block}
+        }
+      }
+      /*卖家中心 二级菜单 end*/
     }
   }
   .aboutBtn{
